the stars are displayed correctly but there is an alignment problem

--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,44 @@
 /* add styles here */
+html {
+  margin: 0;
+ }
+
+
+.stars {
+  display: flex;
+  flex-direction: row;
+}
+
+.stars__star {
+  display: flex;
+  background-image: url(/src/images/star.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  height: 16px;
+  width: 16px;
+  margin: 2px;
+ }
+
+ .stars--0 > .stars__star {
+  background-image: url(/src/images/star.svg);
+}
+
+.stars--1 .stars__star:first-child {
+  background-image: url(/src/images/star-active.svg);
+}
+
+.stars--2 .stars__star:nth-child(-1n + 2) {
+  background-image: url(/src/images/star-active.svg);
+}
+
+.stars--3 .stars__star:nth-child(-1n + 3) {
+  background-image: url(/src/images/star-active.svg);
+}
+
+.stars--4 .stars__star:nth-child(-1n + 4) {
+  background-image: url(/src/images/star-active.svg);
+}
+
+.stars--5 .stars__star:nth-child(-1n + 5) {
+  background-image: url(/src/images/star-active.svg);
+}
